--- a/Forge/changelog.txt
+++ b/Forge/changelog.txt
@@ -1,3 +1,8 @@
+v3.0.53
+
+- Deprecate getPackedOverlay for getOverlay, move to non-static to allow Overriding.
+- Move example resources to constants
+
 v3.0.52
 
 - Fixes broken rotation on cubes
