--- a/Quilt/changelog.txt
+++ b/Quilt/changelog.txt
@@ -1,3 +1,8 @@
+v3.1.34
+
+- Deprecate getPackedOverlay for getOverlay, move to non-static to allow Overriding.
+- Move example resources to constants
+
 v3.1.33
 
 - Fixes broken rotation on cubes
