--- a/Forge/changelog.txt
+++ b/Forge/changelog.txt
@@ -1,3 +1,7 @@
+v3.0.54
+
+- Fixes crashes due to getUniqueID
+
 v3.0.53
 
 - Deprecate getPackedOverlay for getOverlay, move to non-static to allow Overriding.
