--- a/Quilt/changelog.txt
+++ b/Quilt/changelog.txt
@@ -1,3 +1,7 @@
+v3.0.41
+
+- Fixes crashes due to getUniqueID
+
 v3.0.40
 
 - Deprecate getPackedOverlay for getOverlay, move to non-static to allow Overriding.
