--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -1,3 +1,7 @@
+v3.1.35
+
+- Fixes crashes due to getUniqueID
+
 v3.1.34
 
 - Deprecate getPackedOverlay for getOverlay, move to non-static to allow Overriding.
