--- a/Forge/changelog.txt
+++ b/Forge/changelog.txt
@@ -1,3 +1,7 @@
+v3.1.36
+
+- Fixes crashes due to getUniqueID
+
 v3.1.35
 
 - Deprecate getPackedOverlay for getOverlay, move to non-static to allow Overriding.
