--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -1,3 +1,7 @@
+v3.1.37
+
+- MClib updated, Fixed -() group not working - Hiroku https://github.com/fadookie/particleman/pull/7
+
 v3.1.36
 
 - Updated to 22w45a, likely last build of 3.x branches for the snapshots, soon will move this to 4.0 rewrite. 
