--- a/Forge/src/main/resources/assets/geckolib3/lang/en_us.json
+++ b/Forge/src/main/resources/assets/geckolib3/lang/en_us.json
@@ -1,20 +1,26 @@
 {
-  "itemGroup.geckolib_examples": "Geckolib Examples",
-
-  "item.geckolib3.geckoarmor_head": "Gecko Armor Helmet",
-  "item.geckolib3.geckoarmor_chest": "Gecko Armor Chestplate",
-  "item.geckolib3.geckoarmor_leggings": "Gecko Armor Leggings",
-  "item.geckolib3.geckoarmor_boots": "Gecko Armor Boots",
-  "item.geckolib3.jack_in_the_box": "Jack-in-the-Box",
-  "item.geckolib3.pistol": "Pistol",
-  "entity.geckolib3.parasite": "Parasite",
+  "block.geckolib3.fertilizer": "Fertilizer",
+  "block.geckolib3.fertilizer.tooltip": "Turn on rain to see the fertilizer model!",
+  "block.geckolib3.gecko_habitat": "Gecko Habitat",
+  "entity.geckolib3.bat": "Bat",
   "entity.geckolib3.bike": "Bike",
+  "entity.geckolib3.cool_kid": "Cool Kid",
+  "entity.geckolib3.parasite": "Parasite",
   "entity.geckolib3.race_car": "Race Car",
   "entity.geckolib3.texture_per_bone_entity": "Texture-Per-Bone Entity",
-  "entity.geckolib3.example_render_layer_entity": "Example RenderLayer Entity",
-  "block.geckolib3.habitat_block": "Gecko Habitat",
-  "block.geckolib3.fertilizer_block": "Fertilizer",
-  "block.geckolib3.fertilizer_block.tooltip": "Turn on rain to see the fertilizer model!",
+  "item.geckolib3.bat_spawn_egg": "Bat Spawn Egg",
+  "item.geckolib3.bike_spawn_egg": "Bike Spawn Egg",
+  "item.geckolib3.cool_kid_spawn_egg": "Cool Kid Spawn Egg",
+  "item.geckolib3.jack_in_the_box": "Jack-in-the-Box",
   "item.geckolib3.jack_in_the_box.opening": "Opening the Jack-in-the-Box!",
-  "item.geckolib3.pistol.ammo": "Ammo: %1$s/%2$s"
+  "item.geckolib3.parasite_spawn_egg": "Parasite Spawn Egg",
+  "item.geckolib3.pistol": "Pistol",
+  "item.geckolib3.pistol.ammo": "Ammo: %1$s/%2$s",
+  "item.geckolib3.race_car_spawn_egg": "Race Car Spawn Egg",
+  "item.geckolib3.texture_per_bone_entity_spawn_egg": "Texture-Per-Bone Entity Spawn Egg",
+  "item.geckolib3.wolf_armor_boots": "Wolf Armor Boots",
+  "item.geckolib3.wolf_armor_chestplate": "Wolf Armor Chestplate",
+  "item.geckolib3.wolf_armor_helmet": "Wolf Armor Helmet",
+  "item.geckolib3.wolf_armor_leggings": "Wolf Armor Leggings",
+  "itemGroup.geckolib_examples": "Geckolib Examples"
 }
