spawn egg model/lang for gremlin

--- a/Fabric/src/main/resources/assets/geckolib/lang/en_us.json
+++ b/Fabric/src/main/resources/assets/geckolib/lang/en_us.json
@@ -9,6 +9,7 @@
   "entity.geckolib.race_car": "Race Car",
   "entity.geckolib.fake_glass": "Fake Glass",
   "entity.geckolib.mutant_zombie": "Mutant Zombie",
+  "entity.geckolib.gremlin": "Gremlin",
   "entity.geckolib.mutant_zombie.equip": "Gave %1$s to the entity",
   "item.geckolib.bat_spawn_egg": "Bat Spawn Egg",
   "item.geckolib.bike_spawn_egg": "Bike Spawn Egg",
@@ -18,6 +19,7 @@
   "item.geckolib.parasite_spawn_egg": "Parasite Spawn Egg",
   "item.geckolib.pistol": "Pistol",
   "item.geckolib.pistol.ammo": "Ammo: %1$s/%2$s",
+  "item.geckolib.gremlin_spawn_egg": "Gremlin Spawn Egg",
   "item.geckolib.race_car_spawn_egg": "Race Car Spawn Egg",
   "item.geckolib.fake_glass_spawn_egg": "Fake Glass Spawn Egg",
   "item.geckolib.mutant_zombie_spawn_egg": "Mutant Zombie Spawn Egg",
