--- a/Quilt/changelog.txt
+++ b/Quilt/changelog.txt
@@ -1,3 +1,7 @@
-v4.0.0
+v4.0.1
+
+Add some additional reRender support, fix some stuff that probably shouldn't be reRendering. - Tslat
+Homogenise reRender conditional AnimationState support across the various renderers. - Tslat
+Adds faceRotation helper in RenderUtils, most commonly needed for projectiles.
 
 Complete Rewrite of the library. Please see https://github.com/bernie-g/geckolib/wiki/Geckolib-4-Changes for all changes
