Fabric v3.1.38/Forge v3.1.39/Quilt v3.1.39

--- a/Quilt/changelog.txt
+++ b/Quilt/changelog.txt
@@ -1,3 +1,8 @@
+v3.1.39
+
+- Closes #345
+- Adds priority to HumanoidArmorLayer mixin, help resolve crash with Cosmetic Armor 
+
 v3.1.38
 
 - Fixes Access Widener
