--- a/Forge/changelog.txt
+++ b/Forge/changelog.txt
@@ -1,14 +1,5 @@
-v4.0.3
+v4.0.5
 
-- Add DataTicket for TransformType for item rendering - Tslat
-- Add allowing for handling of triggered animations via opt-in system - Tslat
-- Bumps Core Version
-- Add getters for the relevant sub-data objects of GeoArmorRenderer and GeoItemRender - Tslat
-- Add base GeoRenderEvent class and subclasses - Tslat
-- Add BakedGeoModel to parms for Pre and Post render events - Tslat
-- Add event hooks into renderers on Forge - Tslat 
-- Fix incorrect pre-render event check on Forge - Tslat 
-- Add event hooks to Fabric from Forge - Tslat 
-- Add events to Quilt - Tslat 
+- Core tweak (geckolib-core#16)
 
 Complete Rewrite of the library. Please see https://github.com/bernie-g/geckolib/wiki/Geckolib-4-Changes for all changes
