Fabric v3.1.40/Forge v3.1.40/Quilt v3.1.41

--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -1,3 +1,8 @@
+v3.1.40
+
+- Adds enchantment glint to Geckolib Armors.
+- Adds enchantment glint to Geckolib Items.
+
 v3.1.39
 
 - Blacklists gigeresque animation namespace to fix crash. 
