--- a/Forge/changelog.txt
+++ b/Forge/changelog.txt
@@ -4,3 +4,5 @@ v4.1.3
 - Add RenderLayersContainer to allow for deferred CompileLayersEvent for Forge
 - Add renderFinal method for GeoRender, to allow for render operations outside of posestack manipulation
 - Fixed leash & nametag rendering for scaled mobs
+- Fix incorrect colouring on GeoGlowLayer
+- Fix incorrect implementation of PistolRenderer in example pistol item
