--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -9,4 +9,4 @@ v4.2
 - Added an AnimatableCache override in GeoAnimatable
 - Add a context-aware animatable implementation for handling animations independently for different contexts. (Experimental)
 - Added animated texture support for entities, replaced entity, and armour
-- Fixed the builtin scale not being consistently applied
+- Added animated texture support for all geo objects
