--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -8,5 +8,5 @@ v4.2
 - Add jetbrains annotations to the core module
 - Added an AnimatableCache override in GeoAnimatable
 - Add a context-aware animatable implementation for handling animations independently for different contexts. (Experimental)
-- Added animated texture support for entities, replaced entity, and armour
 - Added animated texture support for all geo objects
+- Fixed the built-in scaling not working consistently
