--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v4.3.1
+v4.3.4
 
-- Swap out the null parameters in ItemArmorGeoLayer#getModelForItem with their actual parameters
+- Re-add previously removed optimisation that toyed with animation conflicts. It's better with it than without it
