--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
-v4.3.4
+v4.4
 
 - Re-add previously removed optimisation that toyed with animation conflicts. It's better with it than without it
+- Add in an `isShaking` to GeoEntity rendering, in-line with vanilla's LivingEntityRenderer#isShaking
+- Improved GeoEntity shouldShowName implementation to better match vanilla's modernised implementations, supporting teams and other conditions
