--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v4.4.1
+v4.4.2
 
-- Fix pseudo-reversion of patch to support entityculling
+- Fix non-propagation of isReRender in a handful of places
