--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
-v4.5.2
-- Fix crash with some animation file parsing #582
-- Fixed incorrect precedence handling in the math parser for molang expressions #579
-- Failing to parse a loaded animation will no longer crash the game
-- GeckoLib's logging entries will use the correct name instead of "GeckolibLogger"
+v4.5.3
+
+- Move the lighting setup in GeoItemRenderer to before the buffer VertexConsumer setup so that custom handlers can apply proper context #584
+- Move lighting setup in GeoItemRenderer to its own method #setupLightingForGuiRender for easier manipulation
+- Remove `final` from GeoModel#handleAnimations in exchange for an APIStatus.Internal annotation to allow for overriding. Users should continue to avoid overriding this unless explicitly necessary
