--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
-v4.4.4
+v4.4.5
 
-- Bandaid v2
+- Remove final and add internal annotation to GeoModel#handleAnimations
+- Extract gui lighting to its own method for easier overriding in GeoItemRenderer, move to before VertexConsumer init #584
+- Fix some inconsistent code formatting
+- Improved performance and logging on model loading (roughly related to #573)
+- Add default animation for dying (#569)
+- Use GeoRenderer#getModel in place of direct field access for subclass overriding support
+- Fix crash caused by swapping the baked geomodel and animations in the same frame
