--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
 v4.5.4
 
 - Add additional handling for weirdly formatted bedrock animation jsons
+- Fixed ConcurrentModificationException sometimes happening during startup
+- Add a sanity check for invalid models that somehow parent themselves
