--- a/changelog.txt
+++ b/changelog.txt
@@ -1,25 +1,6 @@
-v4.7
+v4.7.1
 
-- ItemArmorGeoLayer now renders trims and other vanilla armor decorations properly, and allows for mod-customised part visibility
-
-Summary of changes for 4.7:
-- Update to 1.21.3
-    - EntityRenderState is wrapped and ignored - you do not need to worry about this when using GeckoLib (for now)
-- Removed the `query.is_powered` molang query as it is no longer practically feasible
-- Change crashes to warnings for unsupported model format versions for geo models
-- Fix incorrect version range for NeoForge mods
-- Added support for UV Face Rotation
-- Added a deferred GeoRenderProvider for split-sources support
-- Added a stop triggered animation function, to allow for stopping of triggered animations in the same way you triggered them in the first place
-- Added a fallback hook for animations - you can now declare multiple animation files in a single GeoModel to look for animations (for polymorphic/modular animatables)
-- GeoModels now receive the renderer in #getTextureResource and #getModelResource, to allow for render-context dependent models and textures
-- Keyframe events now have the AnimationState passed to them for additional context
-- Moved the AnimationState creation in GeoRenderer to its own method for easy overriding
-- Pass the render colour from the renderer to the render layers
-- Fixed Color#ofARGB actually being RGBA
-- Removed previously deprecated methods
-- Fixed some issues with Entity and ReplacedEntity geo renderers
-- Fixed entity velocity being determined mostly from x-coordinate velocity
-- Fixed the controller-agnostic triggered anim function not working
-- Introduced additional safeties to prevent unexpected crashes for some networking functions
-- Moved animated texture ticking to an internal handler, preventing GeoRenderer implementations from needing to handle it
+- Add some missing annotations to the methods in DeferredGeoRenderProvider
+- Fixed stray letter in GeoBlockEntity comment
+- Fixed StopTriggeredAnim packets not being registered
+- Fixed AutoGlowingGeoLayer rendering the wrong colour
