--- a/changelog.txt
+++ b/changelog.txt
@@ -4,3 +4,4 @@ v4.7.1
 - Fixed stray letter in GeoBlockEntity comment
 - Fixed StopTriggeredAnim packets not being registered
 - Fixed AutoGlowingGeoLayer rendering the wrong colour
+- Fixed ItemArmorGeoRenderer not rendering pieces correctly
