--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v4.8.2
+v4.8.3
 
-- Fix crashing mixin on Forge again
+- Move resource loading to loader-specific handling. Fixes crashes on newer NeoForge builds
