--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v4.8.3
+v4.8.4
 
-- Move resource loading to loader-specific handling. Fixes crashes on newer NeoForge builds
+- Fix crash NeoForge introduced in .84
